# llvm-kaleidoscope

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
.github/workflows/: cmake.yml
src/: CMakeLists.txt  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  compiler.cpp  error.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
test/: CMakeLists.txt  test_codegen.cpp  test_evaluator.cpp  test_lexer.cpp  test_parser.cpp  test_simple.kld
test/sample_programs/: test_extern.kld  test_simple.kld
